update lesson 2 starter

--- a/02_DOM_Manipulation/index.html
+++ b/02_DOM_Manipulation/index.html
@@ -40,5 +40,14 @@
         <div id="address"></div>
       </footer>
     </div>
+    <div id="templates" style="display: none">
+      <li class="list-li">
+        <h3 class="title"></h3>
+        <p class="author"></p>
+        <p class="price"></p>
+        <img src="" alt=""/>
+        <button>Delete</button>
+      </li>
+    </div>
   </body>
 </html>
