update starter code

--- a/03_DOM_Events/assets/export/index.html
+++ b/03_DOM_Events/assets/export/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>VSCode Reveal intro</title>
+  <title>P1L3 - DOM Events slides</title>
 
   <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
   <meta name="author" content="Hakim El Hattab">
@@ -283,9 +283,10 @@ otherForm.addEventListener('submit', (e) => {
             <h2>Let’s Code!</h2>
 <ul>
 <li>Users should be able to delete books by clicking the delete button at the bottom of the book card</li>
-<li>Users should be able to click the New Book button to display the form to add a new book</li>
-<li>Users should be able to hide the New Book form by clicking the button again or hitting the Escape key on their keyboard</li>
 <li>Users should be able to add a book by filling in the form at the top of the page (the book they add should appear in the DOM)</li>
+<li>Users should be able to click the Hide Book Form button to hide the form to add a new book</li>
+<li>Users should be able to show the New Book form by clicking the button again</li>
+<li>Bonus: Users should be able to hide the Book From by pressing the Escape key while it is visible.</li>
 </ul>
 
             </section>
