--- a/03_DOM_Events/index.html
+++ b/03_DOM_Events/index.html
@@ -24,8 +24,8 @@
       </header>
       <main>
         <div id="form-wrapper">
-          <button id="toggleForm">New Book</button>
-          <form id="book-form" class="collapsed">
+          <button id="toggleForm">Hide Book Form</button>
+          <form id="book-form">
           
             <label for="form-title">Title:</label>
             <input type="text" id="form-title" name="title">
@@ -51,9 +51,10 @@
         </div>
       </main>
       <footer>
-        <div id="store"></div>
+        <div id="location"></div>
         <div id="number"></div>
         <div id="address"></div>
+        <div id="hours"></div>
       </footer>
     </div>
   </body>
