awesome starter code update

--- a/04_Communicating_with_the_Server/index.html
+++ b/04_Communicating_with_the_Server/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="list" id="header">
       <header>
-          <h1 id="store-name"></h1>
-          <div id="banner"></div>
+        <h1 id="store-name"></h1>
+        <div id="banner"></div>
       </header>
       <main>
         <div id="form-wrapper">
@@ -47,9 +47,10 @@
         </div>
       </main>
       <footer>
-        <div id="store"></div>
+        <div id="location"></div>
         <div id="number"></div>
         <div id="address"></div>
+        <div id="hours"></div>
       </footer>
     </div>
   </body>
