update lesson 5 starter

--- a/05_POST_request/assets/export/index.html
+++ b/05_POST_request/assets/export/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>P1L5 - POST Requests slides</title>
+  <title>P1L5 - POST Request slides</title>
 
   <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
   <meta name="author" content="Hakim El Hattab">
