--- a/05_POST_request/index.html
+++ b/05_POST_request/index.html
@@ -16,10 +16,8 @@
   <body>
     <div class="list" id="header">
       <header>
-        <div>
-          <h1 id="store-name"></h1>
-          <div id="banner"></div>
-        </div>
+        <h1 id="store-name"></h1>
+        <div id="banner"></div>
       </header>
       <main>
         <select id="store-selector"></select>
@@ -58,7 +56,7 @@
             <input type="text" id="form-address" name="address">
           
             <label for="hours">Hours:</label>
-            <input type="text" id="hours" name="hours">
+            <input type="text" id="form-hours" name="hours">
               
             <input type="submit" value="ADD STORE"/>
           </form>
@@ -70,9 +68,10 @@
         </div>
       </main>
       <footer>
-        <div id="store"></div>
+        <div id="location"></div>
         <div id="number"></div>
         <div id="address"></div>
+        <div id="hours"></div>
       </footer>
     </div>
   </body>
