--- a/02_DOM_Manipulation/index.html
+++ b/02_DOM_Manipulation/index.html
@@ -24,20 +24,15 @@
       <main>
         <div class="list">
           <ul id="book-list">
-            <li class="list-li">
-              <h3>Eloquent JavaScript : A Modern Introduction to Programming</h3>
-              <p>Marjin Haverbeke</p>
-              <p>$10.00</p>
-              <img src="https://images-na.ssl-images-amazon.com/images/I/51IKycqTPUL._SX218_BO1,204,203,200_QL40_FMwebp_.jpg" alt="Eloquent JavaScript cover"/>
-              <button>Delete</button>
-            </li>
+            
           </ul>
         </div>
       </main>
       <footer>
-        <div id="store"></div>
+        <div id="location"></div>
         <div id="number"></div>
         <div id="address"></div>
+        <div id="hours"></div>
       </footer>
     </div>
     <div id="templates" style="display: none">
